Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5003

sanity-hsm test_302 llog_write()) ASSERTION( loghandle->lgh_obj != ((void *)0)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • None
    • 3
    • 13852

      This issue was created by maloo for wangdi <di.wang@intel.com>

      This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/d021bd8e-d2a0-11e3-a102-52540035b04c.

      The sub-test test_302 failed with the following error:

      test failed to respond and timed out

      23:43:18:LustreError: 11-0: lustre-MDT0000-osp-MDT0001: Communicating with 10.1.4.101@tcp, operation obd_ping failed with -107.
      23:43:18:LustreError: Skipped 6 previous similar messages
      23:43:18:Lustre: lustre-MDT0000-osp-MDT0001: Connection to lustre-MDT0000 (at 10.1.4.101@tcp) was lost; in progress operations using this service will wait for recovery to complete
      23:43:18:Lustre: Skipped 5 previous similar messages
      23:43:18:LustreError: 166-1: MGC10.1.4.101@tcp: Connection to MGS (at 10.1.4.101@tcp) was lost; in progress operations using this service will fail
      23:43:18:LustreError: 31202:0:(llog.c:407:llog_process_thread()) llog found corrupted
      23:43:18:LustreError: 31202:0:(llog.c:870:llog_write()) ASSERTION( loghandle->lgh_obj != ((void *)0) ) failed:
      23:43:18:LustreError: 31202:0:(llog.c:870:llog_write()) LBUG
      23:43:18:Pid: 31202, comm: llog_process_th
      23:43:18:
      23:43:18:Call Trace:
      23:43:18: [<ffffffffa0483895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      23:43:18: [<ffffffffa0483e97>] lbug_with_loc+0x47/0xb0 [libcfs]
      23:43:18: [<ffffffffa059dd42>] llog_write+0x352/0x420 [obdclass]
      23:43:18: [<ffffffffa04945a1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      23:43:18: [<ffffffffa059defc>] llog_cancel_rec+0xbc/0x6a0 [obdclass]
      23:43:18: [<ffffffffa059f073>] llog_process_thread+0xb93/0xdc0 [obdclass]
      23:43:18: [<ffffffffa05ed9cf>] ? keys_fill+0x6f/0x190 [obdclass]
      23:43:18: [<ffffffffa059f2e5>] llog_process_thread_daemonize+0x45/0x70 [obdclass]
      23:43:18: [<ffffffffa059f2a0>] ? llog_process_thread_daemonize+0x0/0x70 [obdclass]
      23:43:18: [<ffffffff8109aee6>] kthread+0x96/0xa0
      23:43:18: [<ffffffff8100c20a>] child_rip+0xa/0x20
      23:43:18: [<ffffffff8109ae50>] ? kthread+0x0/0xa0
      23:43:18: [<ffffffff8100c200>] ? child_rip+0x0/0x20
      23:43:18:
      23:43:18:Kernel panic - not syncing: LBUG

      Info required for matching: sanity-hsm 302

            jamesanunez James Nunez (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: