lustre/obdclass/llog.c
@@ -396,12 +396,12 @@ out:
         if (cd != NULL)
                 cd->lpcd_last_idx = last_called_index;
 
-	if (unlikely(rc == -EIO)) {
-		/* something bad happened to the processing, probably I/O
-		 * error or the log got corrupted..
+	if (unlikely(rc == -EIO && loghandle->lgh_obj != NULL)) {
+		/* something bad happened to the processing of a local
+		 * llog file, probably I/O error or the log got corrupted..
 		 * to be able to finally release the log we discard any
 		 * remaining bits in the header */
-		CERROR("llog found corrupted\n");
+		CERROR("Local llog found corrupted\n");
 		while (index <= last_index) {
 			if (ext2_test_bit(index, llh->llh_bitmap) != 0)
 				llog_cancel_rec(lpi->lpi_env, loghandle, index);
